[project]
name = "banner_monk"
version = "0.2.0"
description = "Printing banner out"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
banner-monk = "banner_monk.banner_monk:show"
#script = package.pyfile:function_name

[tool.pdm]
distribution = false
